fix(core/blind): refactor header to not use z-index (#1125)

--- a/packages/core/src/components/blind/blind.scss
+++ b/packages/core/src/components/blind/blind.scss
@@ -87,7 +87,6 @@
 
     width: 100%;
     height: 100%;
-    z-index: 1;
 
     pointer-events: none;
     padding-left: 0.5rem;
